tests/machine/x/ts/list_set_ops.ts
console.log(([1, 2] union [2, 3]));
console.log(([1, 2, 3] except [2]));
console.log(([1, 2, 3] intersect [2, 4]));
console.log((([1, 2] union [2, 3])).length);
